--- a/html-css.html
+++ b/html-css.html
@@ -27,6 +27,12 @@
       dignissimos perferendis!
     </p>
 
+    <p>
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique
+      explicabo quibusdam, iure nisi numquam totam nihil. Et molestiae ea ab
+      totam iste quasi recusandae, sit minima impedit cum consequatur explicabo.
+    </p>
+
     <div id="content">
       <h1>Hello world</h1>
 
